package protobee;


message Server {
	required string api_key         = 1;
	required string name            = 2;
    repeated Connection connections = 3;
}

message Connection {
    required string	transport 		= 1;
	required string local_address  	= 2;
	required uint32 local_port     	= 3;
	required string remote_address 	= 4;
	required uint32 remote_port 	= 5;   
	required uint32 pid         	= 6;
	required string name 			= 7;
}

